Prevented Image Overlap

--- a/dashboard/www/dashboard.css
+++ b/dashboard/www/dashboard.css
@@ -190,22 +190,27 @@ body {
 }
 
 .box {
+  
+    width: -moz-min-content;  /* Firefox/Gecko */
+    width: -webkit-min-content;   /* Webkit */    
+    width: min-content;
+    width: 100%;
+
     text-align: center;
     position: relative;
     border-radius: 3px;
     background: #fff;  
     border-top:0; 
     margin-bottom:0;
-    width: 100%;
-    box-shadow: 0 0 0
+    box-shadow: 0 0 0;
 }
+
 
 .box-body {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     border-bottom-right-radius: 3px;
     border-bottom-left-radius: 3px;
-    padding: 30px
 }
 
 .howTitle {
@@ -245,10 +250,27 @@ margin-left: 40px;
 margin-right: 30px;
 }
 
-/* Center align box titles*/
+.col-sm-2 {
+  display: table;
+}
 
-.box-header {
+.row {
+  padding-left: 15px;
+}
+
+.box {
+  display: table-row;
+}
+
+.box-body .fa-10x{
+  font-size: 7em;
+  position: relative;
+}
+
+/* Center align box titles*/
+.box-header .box-title{
   text-align: center;
+  font-size: 2.5em;
 }
 
 /* Changing font color*/
